# chip8-microbit

./: Cargo.toml  Embed.toml  README.md
.cargo/: config
chip8/: Cargo.toml
chip8-embedded/: Cargo.toml  Embed.toml
chip8-embedded/src/: allocator.rs  cpu.rs  peripheral.rs
chip8-embedded/src/peripheral/: clock_alignment_timer.rs  display.rs  keypad.rs  sound_timer.rs
chip8/src/: allocator.rs  common.rs  cpu.rs  main.rs  peripheral.rs
chip8/src/common/: simple_result.rs  uarte_port.rs
chip8/src/peripheral/: keypad.rs  rom_loader.rs  timer.rs
rom-transfer/: Cargo.toml
rom-transfer/src/: main.rs
scp/: Cargo.toml
scp/src/: checksum_calculator.rs  constants.rs  decoder.rs  embedded.rs  encoder.rs  lib.rs  receiver.rs  transmitter.rs
src/: \  cpu.rs  display.rs  main.rs  peripheral.rs  test_roms.rs
src/peripheral/: display.rs  keypad.rs  rng.rs  rom_loader.rs  serial.rs  timer.rs
src/peripheral/serial/: file_reader.rs  uarte_port.rs
