[package]
name = "chip8"
version = "0.1.0"
authors = ["kattouf <vasiliy.kattouf@gmail.com>"]
edition = "2018"

[dependencies]
microbit-v2 = "0.12.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
panic-halt = "0.2.0"
nb = "1.0.0"
# heapless = "0.7.10"
embedded-hal = "0.2.6"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
keypad = "0.2.2"
void = { version = "1.0.2", default-features = false }
