[package]
name = "chip8-embedded"
version = "0.1.0"
authors = ["kattouf <vasiliy.kattouf@gmail.com>"]
edition = "2018"

[dependencies]
microbit-v2 = "0.12.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# panic-halt = "0.2.0"
nb = "1.0.0"
embedded-hal = "0.2.6"
rand = { version = "0.8.5", default-features = false }
keypad = "0.2.2"
void = { version = "1.0.2", default-features = false }
embedded-alloc = "0.5.0"
scp = { path = "../scp", features = ["embedded"] }
st7567s = "0.1.0"
